--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -36,7 +36,7 @@
           class="form-control"
           name="password"
           placeholder="Password"
-          min="5"
+          minlength="6"
           required
         />
       </div>
