nft-html-to-pdf

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,13 @@
     width="auto"
     height="150"
   />
+  <img
+  class="d-block mx-auto mb-4"
+  src="nodejs.png"
+  alt=""
+  width="auto"
+  height="150"
+/>
   <h1 class="display-5 fw-bold">Welcome to Landing Page</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">
